adding sep campaign dm

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,14 @@ pw/
 # Ignore specific files
 .DS_Store
 .Rproj.user
+.Rproj.user/F0D5C8A2/pcs/source-pane.pper
+.Rproj.user/F0D5C8A2/pcs/source-pane.pper
+.Rproj.user/F0D5C8A2/pcs/source-pane.pper
+.Rproj.user/F0D5C8A2/pcs/windowlayoutstate.pper
+.Rproj.user/F0D5C8A2/pcs/source-pane.pper
+.Rproj.user/F0D5C8A2/pcs/windowlayoutstate.pper
+.Rproj.user/F0D5C8A2/sources/prop/INDEX
+.Rproj.user/shared/notebooks/paths
+form-fill/.DS_Store
+*.pper
+*.pper
