--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,8 @@ form-fill/.DS_Store
 *.pper
 *.pper
 .DS_Store
+.Rproj.user/F0D5C8A2/pcs/files-pane.pper
+.Rproj.user/F0D5C8A2/pcs/source-pane.pper
+.Rproj.user/F0D5C8A2/pcs/windowlayoutstate.pper
+.gitignore
+form-fill/.DS_Store
